change application name

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   application:
-    name: msCuentaAtm
+    name: ms-cuenta-atm
   datasource:
-    url: jdbc:postgresql://localhost:5432/banco
+    url: jdbc:postgresql://localhost:5432/atm
     username: postgres
-    password: n
+    password: postgres
   jpa:
     hibernate:
       ddl-auto: update
